--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
   </header>
 
-  <div class="game-tile" onclick="loadGame('game1.html')">
+  <div class="game-tile" onclick="window.open('game1.html', '_blank')">
   <img src="https://via.placeholder.com/150x150.png?text=Game+1" alt="Game 1">
   <p>Game 1</p>
 </div>
